--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: arial;
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
 
@@ -20,20 +20,30 @@ h2{
 }
 #navbar{
     display:flex;
-    justify-content: space-between;
-    text-align: center;
+    text-align: right;
     background-color: rgba(0, 0, 0, 0.452);
 
 }
+#right-sided-navbar{
+    display: flex;
+    justify-content: space-evenly;
+    margin-right: 0px;
+    align-items: end;
+        text-align: right;
+    margin-left: 800px;
+    width: 500px;
+    font-weight: 400;
+}
 #logo{
     left:40px;
+    display: inline-block;
 }
 #form-container{
     margin-top: 150px;
     color:black;
     background-color: rgba(0, 0, 0, 0.65);
     text-align: center;
-    height: 400px;
+    height: 500px;
     width: 900px;
     border-radius: 15px;
     margin-left: 220px;
