--- a/style.css
+++ b/style.css
@@ -91,11 +91,13 @@ h2{
 }
 #gender-div{
     display:flex;
-    justify-content:center;
+    width:100px;
+    justify-content:space-around;
 }
 #male{
     padding-right:20px;
 }
+
 
 
 
