--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
 #footer{
     background-color: rgba(0, 0, 0, 0.65);
     text-align: right;
-    height: 100px;
+    height: 140px;
     color:whitesmoke;
     margin-top:70px;
     font-family: arial;
@@ -110,8 +110,17 @@ body{
     width:100px;
     justify-content:space-around;
 }
+.footer{
+    font-size:10px;
+    font-style:arial;
+}
+.footer:hover{
+    box-shadow: 2px 2px 2px 2px orange;
+    background-color:orange;
+}
 
     
+
 
 
 
