--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body{
 }
 .footer:hover{
     border:0.01px dashed orange;
-    border-radius:10px
+    border-radius:7px;
     color:orange;
     font-size:14px;
 }
@@ -140,6 +140,7 @@ body{
 f-d{
     width:40%;
 }
+
 
 
 
