--- a/style.css
+++ b/style.css
@@ -106,8 +106,10 @@ body{
     border:0.01px dashed orange;
     border-radius:7px;
     color:orange;
-    font-size:14px;
 }
+.footer:hover{
+    transition:all 1s ease-in;
+    font-size:13.7px;
 #hobby{
     border-radius: 10px;
     margin-top: 10px;
@@ -152,7 +154,9 @@ footer {
     margin: 4px 0;
     font-size: 13px;
     display: block;
+    padding-left:5px;
 }
+
 
 
 
