--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 
 }
 body{
-    background-image:url("https://img.freepik.com/free-photo/galaxy-wallpaper-warm-colors_23-2151769491.jpg?semt=ais_hybrid&w=740&q=80");
     background-size: cover;
     text-align: center;
 }
@@ -15,7 +14,7 @@ body{
     color:whitesmoke;
     font-family: arial;
 }
-#headings{
+.headings{
         color:whitesmoke;
         font-family: 'Trebuchet MS';
 }
@@ -165,6 +164,7 @@ footer {
   min-height: 100%;
     z-index:-5;
 }
+
 
 
 
