--- a/style.css
+++ b/style.css
@@ -157,65 +157,6 @@ footer {
     display: block;
     padding-left:5px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+main-head{
+    width:150px;
+}
