--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body{
     font-family: arial;
 }
 .headings{
+        margin-right: 600px;
         color:whitesmoke;
         font-family: 'Trebuchet MS';
-        margin-right: 600px;
         animation-name: headings;
         animation-duration: 0.8s;
         animation-fill-mode: forwards;
@@ -173,10 +173,17 @@ footer {
     width:150px;
     margin-left:100px;
     margin-top:30px;
+    color:whitesmoke;
+    font-family: 'Trebuchet MS';
+    animation-name: headings;
+    animation-duration: 0.8s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in;
     animation: headings 0.8s ease-in;
     animation-fill-mode: forwards;
     animation-delay: 0.3s;
 }
+
 
 
 
