--- a/style.css
+++ b/style.css
@@ -101,12 +101,16 @@ body{
     padding-left:10px;
 }
 .links:hover{
-    color:orange;
-    font-weight: bolder;
+    background: -webkit-linear-gradient(135deg,whitesmoke,orange 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 600;
     transition-duration: 0.7s;
 }
 #submit-button:active{
-    background-color: orange;
+    background: -webkit-linear-gradient(135deg,black,orange 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 #submit-button:hover{
     transform:scale(1.05,1);
@@ -136,11 +140,13 @@ body{
 .footer:hover{
     border:0.01px dashed orange;
     border-radius:7px;
-    color:orange;
+    background: -webkit-linear-gradient(135deg,whitesmoke,orange 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .footer:hover{
     transition:font-size 0.5s ease-in;
-    font-size:13.7px;
+    font-size:13.4px;
     }
 #hobby{
     border-radius: 10px;
@@ -188,6 +194,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
