--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ body{
 .footer:hover{
     border:0.01px dashed orange;
     border-radius:7px;
-    background: -webkit-linear-gradient(135deg,whitesmoke,orange 70%);
+    background: -webkit-linear-gradient(whitesmoke,orange 70%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -195,6 +195,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
