--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body{
     transition:font-size 0.5s ease-in;
     font-size:13.4px;
     }
-#hobby{
+#talent{
     border-radius: 10px;
     margin-top: 10px;
     height: 100px;
@@ -198,6 +198,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
