--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ body{
 .salary{
     color:white;
     bottom:10px;
+}
+#showing-salary{
     width:700px;
 }
 #total-spaced-form{
@@ -211,6 +213,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
