--- a/style.css
+++ b/style.css
@@ -146,9 +146,9 @@ body{
 #salary-div {
     display: flex;
     flex-direction: column;   
-    align-items: center; 
+    align-items: flex-start; 
     gap: 10px;     
-    text-align:center;
+    margin-left:500px
 }
 #male{
     padding-right:20px;
@@ -220,6 +220,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
