--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body{
     margin-top: 150px;
     background-color: rgba(0, 0, 0, 0.65);
     text-align: center;
-    height: 1220px;
+    height: auto;
     width: 930px;
     border-radius: 15px;
 }
@@ -94,6 +94,7 @@ body{
     width:400px;
     color:whitesmoke;
     margin-top:30px;
+    margin-bottom:50px;
 }
 .inputs{
     border-radius: 10px;
@@ -212,6 +213,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
