--- a/style.css
+++ b/style.css
@@ -54,8 +54,9 @@ body{
     display:flex;
     text-align: right;
     background-color: rgba(0, 0, 0, 0.452);
-    right:0px
-
+    right:0px;
+    box-shadow: inset 0 0 12px 12px white, inset 0 0 3px 2px white;
+    background: linear-gradient(to right, orange , yellow);
 }
 #right-sided-navbar{
     display: flex;
@@ -213,6 +214,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
