--- a/style.css
+++ b/style.css
@@ -100,11 +100,11 @@ body{
     border-radius: 15px;
 }
 #submit-button{
-    background-image: linear-gradient(black,orange,black);
+    background-color:black;
     font-family: sans-serif;
     font-weight: 700;
     width:400px;
-    color:whitesmoke;
+    color:linear-gradient(135deg,yellow,orange);
     margin-top:30px;
     margin-bottom:50px;
 }
@@ -225,6 +225,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
