--- a/style.css
+++ b/style.css
@@ -100,11 +100,11 @@ body{
     border-radius: 15px;
 }
 #submit-button{
-    background-color:black;
+    background-image:linear-gradient(135deg,yellow,orange);
     font-family: sans-serif;
     font-weight: 700;
     width:400px;
-    color:linear-gradient(135deg,yellow,orange);
+    color:whitesmoke;
     margin-top:30px;
     margin-bottom:50px;
 }
@@ -225,6 +225,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
