--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
     border-radius: 15px;
 }
 #submit-button{
-    background-image:linear-gradient(135deg,yellow,orange);
+    background-image:linear-gradient(135deg,#FFF700,#FFA500);
     font-family: sans-serif;
     font-weight: 700;
     width:400px;
@@ -225,6 +225,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
