--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
 @media screen and (min-width: 1000px) and (max-width: 1080px) {
     @keyframes head{
     from{transform: translateX(0px);}
-    to{transform:translateX(130px);}
+    to{transform:translateX(150px);}
+    }
+    #right-sided-navbar{
+        margin-left:140px
     }
 }
 @keyframes headings{
@@ -231,6 +234,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
