--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     to{transform:translateX(150px);}
     }
     #right-sided-navbar{
-        margin-left:140px
+        margin-left:140px;
     }
 }
 @keyframes headings{
@@ -234,6 +234,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
