--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ body{
     background-color: rgba(0, 0, 0, 0.452);
     right:0px;
     position: relative;
-    z-index: 10;
+    z-index: 10
+    background-image:linear-gradient(black,orange,orange,orange,orange,orange,black);
 }
 #navbar::after {
     content: "";
@@ -73,7 +74,7 @@ body{
     left: 0;
     bottom: -8px; 
     width: 100%;
-    height: 20px; 
+    height: 10px; 
     z-index: -1;
     background: linear-gradient(to bottom, rgba(255,165,0,0.7), rgba(255,255,0,0.0));
     filter: blur(20px);
@@ -234,6 +235,7 @@ footer {
     display: block;
     padding-left:5px;
 }
+
 
 
 
