--- a/style.css
+++ b/style.css
@@ -238,7 +238,10 @@ footer {
     display: block;
     padding-left:5px;
 }
-
+form {
+  box-shadow: 0 0 25px rgba(255, 165, 0, 0.3);
+  border-radius: 12px;
+}
 
 
 
