--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     border-radius:50%;
 }
 body{
-    background-image:url("bg(2).jpg");
+    background-image:url("bg.png");
     background-size: cover;
     background-repeat:no-repeat;
     text-align: center;
@@ -283,6 +283,7 @@ form {
   box-shadow: 0 0 25px rgba(255, 165, 0, 0.3);
   border-radius: 12px;
 }
+
 
 
 
