--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 /* -------------------------------------- */
 
 body {
-    background-image: url("bg.png");
+    background-image: url("bg(1).png");
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
@@ -340,3 +340,4 @@ form {
     box-shadow: 0 0 25px rgba(255, 165, 0, 0.3);
     border-radius: 12px;
 }
+
