--- a/style.css
+++ b/style.css
@@ -379,6 +379,7 @@ select option {
     font-family: arial;
     padding-left: 10px;
     padding-top: 5px;
+    background-color:rgba(245,245,245,0.7)
 }
 
 /* -------------------------------------- */
@@ -486,6 +487,7 @@ form {
     border: 1px solid rgba(255,255,255,0.7);  
     flex-wrap: nowrap;      
 }
+
 
 
 
