--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 @keyframes head {
     from { transform: translateX(0px); }
-    to { transform: translateX(45%); }
+    to { transform: translateX(100%); }
 }
 
 @keyframes headings {
@@ -51,7 +51,7 @@ body {
     background: -webkit-linear-gradient(135deg, whitesmoke, orange 70%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    
+    font-weight: 800;
 }
 
 #f-main-head {
@@ -69,7 +69,7 @@ body {
     animation-fill-mode: forwards;
     animation-timing-function: ease-in;
     width: 400px;
-    font-weight:450;
+    font-weight: 800;
 }
 /* -------------------------------------- */
 /* NAVBAR */
@@ -83,29 +83,6 @@ body {
     right: 0;
     z-index: 10;
     border-bottom: 1.7px solid rgba(255, 255, 255, 0.6);
-}
-
-#navbar::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    width: 100%;
-    height: 10px;
-    background: linear-gradient(to bottom, rgba(255,165,0,0.7), rgba(255,255,0,0));
-    filter: blur(20px);
-    z-index: -1;
-}
-
-#right-sided-navbar {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: end;
-    text-align: right;
-    margin-left: 30%;
-    margin-right: 0;
-    width: 200px;
-    font-weight: 400;
 }
 /* -------------------------- */
 /* MENU BUTTON + DROPDOWN     */
@@ -160,9 +137,7 @@ body {
 #menu:hover #dropdown {
     display: flex;
 }
-/* -------------------------------- */
-/* SUB DROPDOWN INSIDE DASHBOARD    */
-/* -------------------------------- */
+
 
 .sub-drop {
     position: relative;
@@ -193,10 +168,7 @@ body {
     overflow: hidden;
     opacity: 0;
     transform: translateY(-5px);
-    transition:
-        max-height 0.3s ease,
-        opacity 0.25s ease,
-        transform 0.25s ease;
+    
 }
 
 
@@ -266,6 +238,7 @@ body {
     font-family: arial;
     padding-left: 10px;
     color: rgba(255, 255, 255, 0.6);
+    border-radius: 5px;
 }
 
 .inputs:focus {
@@ -277,52 +250,52 @@ body {
 .inputs::placeholder {
     color: rgba(255, 255, 255, 0.6);
 }
-
+#skills{
+    color: whitesmoke;
+}
 select option {
     color: black;
 }
 
-#submit-button {
+#submit-button ,#reset-button{
     background-image:linear-gradient(140deg,rgb(50, 202, 253),rgb(255, 30, 30));
     font-family: sans-serif;
     font-weight: 700;
     width: 400px;
     margin-top: 30px;
-    margin-bottom: 50px;
     border-radius: 15px;
     color: whitesmoke;
 }
+#submit-button {
+    margin-bottom: 20px;
+}
 
-#submit-button:hover {
+#submit-button:hover, #reset-button:hover {
     transform: scale(1.05, 1);
 }
 
-#submit-button:active {
+#submit-button:active, #reset-button:active {
     background: -webkit-linear-gradient(135deg, black, orange 70%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-/* -------------------------------------- */
-/* MISC FORM ELEMENTS */
-/* -------------------------------------- */
 
-.gender {
-    color: white;
-    display: inline-block;
-    bottom: 10px;
-}
 
-.salary-option,
-.exp-option {
+
+.skills-option{
     color: white;
     font-family: arial;
     font-size: 16px;
-    display: flex;
+    display: inline-block;
     align-items: center;
     font-weight:100;
 }
-
+#resume::file-selector-button{
+    background-color: rgba(255, 255, 255, 0);
+    border-radius: 10px;
+    color:white
+}
 #total-spaced-form {
     display: flex;
     justify-content: center;
@@ -331,9 +304,7 @@ select option {
     display: flex;
     justify-content: center;
 }
-
-#salary-div,
-#exp-div {
+#skills-div {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -425,9 +396,6 @@ footer {
     transition-duration: 0.4s;
 }
 
-/* -------------------------------------- */
-/* FORM SHADOW */
-/* -------------------------------------- */
 
 form {
     box-shadow: 0 0 25px rgba(255, 165, 0, 0.3);
@@ -447,7 +415,7 @@ form {
     color: rgba(255, 255, 255, 0.932);
     font-size: 14px;
     line-height: 1.6;
-    width: 55%;              /* space for text on right */
+    width: 55%;
     padding: 20px;
     font-weight: 550;
 }
@@ -467,8 +435,3 @@ form {
     border: 1px solid rgba(255,255,255,0.7);  
     flex-wrap: nowrap;      
 }
-
-
-
-
-
