--- a/style.css
+++ b/style.css
@@ -27,11 +27,6 @@ body {
 /* ANIMATIONS */
 /* -------------------------------------- */
 
-@keyframes head {
-    from { transform: translateX(0px); }
-    to { transform: translateX(47vh); }
-}
-
 @keyframes headings {
     from { transform: translateX(0px); }
     to { transform: translateX(300px); }
@@ -40,7 +35,9 @@ body {
     from { transform: translateX(0px); }
     to { transform: translateX(285px); }
 }
-
+/* -------------------------------------- */
+/*MOB FRIENDLY*/
+/* -------------------------------------- */
 /* -------------------------------------- */
 /* HEADINGS & TEXT STYLES */
 /* -------------------------------------- */
@@ -49,11 +46,6 @@ body {
     margin-left: 200px;
     margin-top: 30px;
     font-family: 'Trebuchet MS';
-    animation-name: head;
-    animation-duration: 0.8s;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease-in;
-    animation-delay: 0.3s;
     background: -webkit-linear-gradient(135deg, whitesmoke, orange 70%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -289,7 +281,7 @@ body {
     margin-top: 150px;
     background-color: rgba(0, 0, 0, 0.24);
     text-align: center;
-    width: 650px;
+    width: 120vh;
     height: auto;
     border-radius: 15px;
     backdrop-filter: blur(13.3px);
@@ -477,6 +469,7 @@ footer {
     transform: scale(1.10);
     transition-duration: 0.4s;
 }
+
 
 
 
